--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,198 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Team Performance Dashboard</title>
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome for icons -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- XLSX.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
     body {
-      background-color: #f4f6f9;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .card {
-      border-radius: 15px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-    }
-    .dashboard-header {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f7f9fc;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      margin: 30px 0;
-      font-weight: 600;
     }
+
+    h1 {
+      color: #222;
+      margin-top: 30px;
+    }
+
+    .filter {
+      margin: 20px;
+    }
+
     select {
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    .cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 30px auto;
+      width: 90%;
+    }
+
+    .card {
+      background: white;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      width: 220px;
+      padding: 25px;
+      text-align: center;
+      transition: 0.3s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
+    .icon {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+
+    .blue { color: #007bff; }
+    .green { color: #28a745; }
+    .yellow { color: #ffc107; }
+    .red { color: #dc3545; }
+
+    .value {
+      font-size: 26px;
+      font-weight: bold;
+    }
+
+    .label {
+      color: #555;
+      font-size: 15px;
+    }
+
+    .charts {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      width: 90%;
+      margin: 0 auto 60px;
+    }
+
+    canvas {
+      background: white;
       border-radius: 10px;
-      padding: 5px;
+      padding: 20px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    footer {
+      background-color: #eee;
+      padding: 10px;
+      color: #555;
+      font-size: 14px;
     }
   </style>
 </head>
-
 <body>
-  <div class="container">
-    <h2 class="dashboard-header">Team Performance Dashboard</h2>
 
-    <!-- Month Filter -->
-    <div class="text-center mb-4">
-      <label class="fw-bold me-2">Select Month:</label>
-      <select id="monthFilter" class="form-select w-auto d-inline-block">
-        <option value="All">All</option>
-      </select>
+  <h1>Team Performance Dashboard</h1>
+
+  <div class="filter">
+    <label for="monthSelect"><b>Select Month:</b></label>
+    <select id="monthSelect" onchange="filterByMonth()">
+      <option value="All">All</option>
+      <option value="January">January</option>
+      <option value="February">February</option>
+      <option value="March">March</option>
+      <option value="April">April</option>
+      <option value="May">May</option>
+      <option value="June">June</option>
+      <option value="July">July</option>
+      <option value="August">August</option>
+      <option value="September">September</option>
+      <option value="October">October</option>
+      <option value="November">November</option>
+      <option value="December">December</option>
+    </select>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <div class="icon blue">🕒</div>
+      <div id="totalHours" class="value">0 h</div>
+      <div class="label">Total Hours</div>
     </div>
 
-    <!-- KPI Cards -->
-    <div class="row g-4 text-center">
-      <div class="col-md-3">
-        <div class="card p-3">
-          <i class="fa-solid fa-clock fa-2x text-primary mb-2"></i>
-          <h3 id="totalHours">0 h</h3>
-          <p>Total Hours</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <i class="fa-solid fa-chart-line fa-2x text-success mb-2"></i>
-          <h3 id="avgPerf">0%</h3>
-          <p>Average Performance</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <i class="fa-solid fa-users fa-2x text-warning mb-2"></i>
-          <h3 id="teamCount">0</h3>
-          <p>Team Members</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <i class="fa-solid fa-trophy fa-2x text-danger mb-2"></i>
-          <h3 id="topPerformer">-</h3>
-          <p>Top Performer</p>
-        </div>
-      </div>
+    <div class="card">
+      <div class="icon green">📈</div>
+      <div id="averagePerformance" class="value">0%</div>
+      <div class="label">Average Performance</div>
     </div>
 
-    <!-- Charts -->
-    <div class="row mt-5">
-      <div class="col-md-6">
-        <div class="card p-4">
-          <h5>Hours by Team Member</h5>
-          <canvas id="barChart"></canvas>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card p-4">
-          <h5>Performance Trend by Month</h5>
-          <canvas id="lineChart"></canvas>
-        </div>
-      </div>
+    <div class="card">
+      <div class="icon yellow">👥</div>
+      <div id="teamCount" class="value">0</div>
+      <div class="label">Team Members</div>
+    </div>
+
+    <div class="card">
+      <div class="icon red">🏆</div>
+      <div id="topPerformer" class="value">-</div>
+      <div class="label">Top Performer</div>
     </div>
   </div>
 
-  <!-- Script -->
+  <div class="charts">
+    <canvas id="hoursChart" width="400" height="300"></canvas>
+    <canvas id="performanceChart" width="400" height="300"></canvas>
+  </div>
+
+  <footer>
+    Last updated: <span id="updateDate"></span>
+  </footer>
+
   <script>
-    let allData = [];
-    let barChart, lineChart;
+    let teamData = [];
 
-    // Load Excel automatically
-    window.onload = function() {
-      fetch('fetch('https://raw.githubusercontent.com/niijannfbd7890/team-dashboard/main/team_report.csv')')
-        .then(response => response.arrayBuffer())
-        .then(data => {
-          const workbook = XLSX.read(data, { type: 'array' });
-          const sheet = workbook.Sheets[workbook.SheetNames[0]];
-          allData = XLSX.utils.sheet_to_json(sheet);
-          populateMonthDropdown(allData);
-          updateDashboard('All');
-        })
-        .catch(err => alert("⚠️ Error loading Excel file. Ensure 'team_report.xlsx' is in the same folder."));
-    };
+    // Load CSV
+    Papa.parse("team_report.csv", {
+      download: true,
+      header: true,
+      dynamicTyping: true,
+      complete: function(results) {
+        teamData = results.data;
+        updateDashboard(teamData);
+        document.getElementById("updateDate").innerText = new Date().toLocaleDateString();
+      },
+      error: function() {
+        alert("⚠️ Error loading CSV file. Ensure 'team_report.csv' is in the same folder as index.html");
+      }
+    });
 
-    // Populate dropdown
-    function populateMonthDropdown(data) {
-      const months = [...new Set(data.map(d => d.Month))];
-      const dropdown = document.getElementById('monthFilter');
-      months.forEach(m => {
-        const opt = document.createElement('option');
-        opt.value = m;
-        opt.textContent = m;
-        dropdown.appendChild(opt);
-      });
-      dropdown.addEventListener('change', e => updateDashboard(e.target.value));
+    // Filter by Month
+    function filterByMonth() {
+      const selectedMonth = document.getElementById("monthSelect").value;
+      let filteredData = teamData;
+      if (selectedMonth !== "All") {
+        filteredData = teamData.filter(row => row.Month === selectedMonth);
+      }
+      updateDashboard(filteredData);
     }
 
-    // Update dashboard based on month
-    function updateDashboard(selectedMonth) {
-      let data = selectedMonth === 'All' ? allData : allData.filter(d => d.Month === selectedMonth);
+    // Update Dashboard
+    function updateDashboard(data) {
+      if (!data.length) return;
 
-      const names = data.map(d => d.Name);
-      const hours = data.map(d => parseFloat(d.Hours));
-      const perf = data.map(d => parseFloat(d.Performance));
+      const totalHours = data.reduce((sum, row) => sum + (row.Hours || 0), 0);
+      const avgPerformance = data.reduce((sum, row) => sum + (row.Performance || 0), 0) / data.length;
+      const teamCount = new Set(data.map(row => row.Name)).size;
+      const topPerformer = data.sort((a, b) => b.Performance - a.Performance)[0]?.Name || "-";
 
-      // KPIs
-      const totalHours = hours.reduce((a, b) => a + b, 0).toFixed(1);
-      const avgPerf = (perf.reduce((a, b) => a + b, 0) / perf.length || 0).toFixed(2);
-      const topIndex = perf.indexOf(Math.max(...perf));
-      const topPerformer = names[topIndex] || '-';
+      document.getElementById("totalHours").innerText = `${totalHours.toFixed(1)} h`;
+      document.getElementById("averagePerformance").innerText = `${(avgPerformance * 100).toFixed(1)}%`;
+      document.getElementById("teamCount").innerText = teamCount;
+      document.getElementById("topPerformer").innerText = topPerformer;
 
-      document.getElementById('totalHours').innerText = `${totalHours} h`;
-      document.getElementById('avgPerf').innerText = `${avgPerf}%`;
-      document.getElementById('teamCount').innerText = data.length;
-      document.getElementById('topPerformer').innerText = topPerformer;
+      updateCharts(data);
+    }
 
-      // Bar Chart (Hours by Team Member)
-      if (barChart) barChart.destroy();
-      const barCtx = document.getElementById('barChart').getContext('2d');
-      barChart = new Chart(barCtx, {
-        type: 'bar',
+    // Update Charts
+    function updateCharts(data) {
+      const names = data.map(row => row.Name);
+      const hours = data.map(row => row.Hours);
+      const performance = data.map(row => row.Performance * 100);
+
+      const ctx1 = document.getElementById("hoursChart").getContext("2d");
+      const ctx2 = document.getElementById("performanceChart").getContext("2d");
+
+      if (window.hoursChart) window.hoursChart.destroy();
+      if (window.performanceChart) window.performanceChart.destroy();
+
+      window.hoursChart = new Chart(ctx1, {
+        type: "bar",
         data: {
           labels: names,
           datasets: [{
-            label: 'Hours Worked',
+            label: "Total Hours",
             data: hours,
-            backgroundColor: '#007bff'
+            borderWidth: 1
           }]
         },
-        options: { responsive: true }
+        options: {
+          scales: { y: { beginAtZero: true } }
+        }
       });
 
-      // Line Chart (Performance Trend by Month)
-      if (lineChart) lineChart.destroy();
-      const lineCtx = document.getElementById('lineChart').getContext('2d');
-      const monthlyData = getMonthlyPerformance();
-      lineChart = new Chart(lineCtx, {
-        type: 'line',
+      window.performanceChart = new Chart(ctx2, {
+        type: "line",
         data: {
-          labels: monthlyData.labels,
+          labels: names,
           datasets: [{
-            label: 'Average Performance (%)',
-            data: monthlyData.values,
-            borderColor: '#28a745',
+            label: "Performance (%)",
+            data: performance,
+            borderColor: "#28a745",
             fill: false,
             tension: 0.3
           }]
         },
-        options: { responsive: true }
+        options: {
+          scales: { y: { beginAtZero: true } }
+        }
       });
-    }
-
-    // Monthly Performance Trend
-    function getMonthlyPerformance() {
-      const grouped = {};
-      allData.forEach(d => {
-        if (!grouped[d.Month]) grouped[d.Month] = [];
-        grouped[d.Month].push(parseFloat(d.Performance));
-      });
-      const labels = Object.keys(grouped);
-      const values = labels.map(m => (grouped[m].reduce((a, b) => a + b, 0) / grouped[m].length).toFixed(2));
-      return { labels, values };
     }
   </script>
 </body>
