--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       });
     }
 
-    Papa.parse("team_report.csv", {
+    Papa.parse("https://nijannfbd7890.github.io/Team-Dashboard/team_report.csv", {
       download: true,
       header: true,
       complete: function(results) {
@@ -132,4 +132,5 @@
     });
   </script>
 </body>
+
 </html>
