--- a/index.html
+++ b/index.html
@@ -3,134 +3,245 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Team Performance Dashboard</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <title>Marketing Management Dashboard</title>
+
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- PapaParse for CSV -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+
   <style>
     body {
-      background-color: #f5f7fb;
-      font-family: "Segoe UI", sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f7fa;
+      margin: 0;
+      padding: 0;
     }
     header {
-      background-color: #0d6efd;
+      background-color: #007bff;
       color: white;
       text-align: center;
-      padding: 1.5rem 0;
-      margin-bottom: 1.5rem;
+      padding: 30px 10px;
     }
+    h1 { margin: 0; font-size: 2rem; }
+    h2 { margin-top: 5px; font-weight: normal; }
+
+    .container {
+      width: 90%;
+      margin: 30px auto;
+      text-align: center;
+    }
+
+    .metrics {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin-top: 20px;
+    }
+
     .card {
-      border: none;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      background: white;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      padding: 20px;
+      width: 22%;
+      min-width: 250px;
+      margin: 10px;
     }
-    .card h3 {
-      font-size: 2rem;
-      margin: 0;
-    }
+
+    .card h3 { margin: 10px 0 5px; }
+    .card p { font-size: 1.5rem; font-weight: bold; }
+
     select {
-      margin: 10px auto;
-      display: block;
-      width: 200px;
-      padding: 5px;
+      padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
+      margin-top: 20px;
     }
+
+    canvas {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px auto;
+      display: block;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 30px;
+      background: white;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    th, td {
+      padding: 12px;
+      border-bottom: 1px solid #eee;
+      text-align: center;
+    }
+
+    th {
+      background-color: #007bff;
+      color: white;
+    }
+
+    .high { background-color: #d4edda; } /* Green for >95% */
+    .medium { background-color: #fff3cd; } /* Yellow for 80–95% */
+    .low { background-color: #f8d7da; } /* Red for <80% */
   </style>
 </head>
+
 <body>
   <header>
     <h1>Marketing Management Team Dashboard</h1>
-    <p>Performance Analytics — July to November 2025</p>
+    <h2>Performance Analytics — July to November 2025</h2>
   </header>
 
-  <div class="container text-center">
-    <label for="monthFilter" class="fw-bold">Select Month:</label>
-    <select id="monthFilter">
+  <div class="container">
+    <h3>Select Month:</h3>
+    <select id="monthSelect">
       <option value="All">All</option>
     </select>
 
-    <div class="row g-3 mt-3">
-      <div class="col-md-3"><div class="card p-4"><h3 id="totalHours">0h</h3><p>Total Hours</p></div></div>
-      <div class="col-md-3"><div class="card p-4"><h3 id="avgPerf">0%</h3><p>Average Performance</p></div></div>
-      <div class="col-md-3"><div class="card p-4"><h3 id="teamCount">0</h3><p>Team Members</p></div></div>
-      <div class="col-md-3"><div class="card p-4"><h3 id="topPerformer">-</h3><p>Top Performer</p></div></div>
+    <div class="metrics">
+      <div class="card"><h3>Total Hours</h3><p id="totalHours">0h</p></div>
+      <div class="card"><h3>Average Performance</h3><p id="avgPerformance">0%</p></div>
+      <div class="card"><h3>Team Members</h3><p id="teamCount">0</p></div>
+      <div class="card"><h3>Top Performer</h3><p id="topPerformer">-</p></div>
     </div>
 
-    <div class="row mt-5">
-      <div class="col-md-6"><canvas id="hoursChart"></canvas></div>
-      <div class="col-md-6"><canvas id="perfPie"></canvas></div>
-    </div>
+    <canvas id="hoursChart" height="100"></canvas>
+    <canvas id="performanceChart" height="100"></canvas>
+
+    <table id="dataTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Performance</th>
+          <th>Remarks</th>
+          <th>Hours</th>
+          <th>Month</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 
   <script>
-    let allData = [];
-    let hoursChart, perfPie;
+    const csvUrl = "https://nijannfbd7890.github.io/Team-Dashboard/team_report.csv";
+    let data = [];
 
-    function timeToHours(timeStr) {
-      const [h, m, s] = timeStr.split(':').map(Number);
-      return h + (m / 60) + (s / 3600);
-    }
-
-    function populateMonths(data) {
-      const select = document.getElementById("monthFilter");
-      const months = [...new Set(data.map(d => d.Month).filter(Boolean))];
-      months.forEach(m => {
-        const opt = document.createElement("option");
-        opt.value = m;
-        opt.textContent = m;
-        select.appendChild(opt);
-      });
-    }
-
-    function updateDashboard(month) {
-      let filtered = month === "All" ? allData : allData.filter(d => d.Month === month);
-
-      const totalHours = filtered.reduce((sum, row) => sum + timeToHours(row.Hours || "0:0:0"), 0);
-      const avgPerf = filtered.reduce((sum, row) => sum + parseFloat(row.Performance.replace('%','')), 0) / filtered.length;
-      const top = filtered.reduce((a, b) => parseFloat(a.Performance) > parseFloat(b.Performance) ? a : b);
-
-      document.getElementById("totalHours").innerText = totalHours.toFixed(1) + " h";
-      document.getElementById("avgPerf").innerText = isNaN(avgPerf) ? "0%" : avgPerf.toFixed(1) + "%";
-      document.getElementById("teamCount").innerText = filtered.length;
-      document.getElementById("topPerformer").innerText = top?.Name || "-";
-
-      const names = filtered.map(r => r.Name);
-      const hours = filtered.map(r => timeToHours(r.Hours || "0:0:0"));
-      const perfs = filtered.map(r => parseFloat(r.Performance.replace('%','')));
-
-      if (hoursChart) hoursChart.destroy();
-      if (perfPie) perfPie.destroy();
-
-      const ctx1 = document.getElementById("hoursChart").getContext("2d");
-      hoursChart = new Chart(ctx1, {
-        type: "bar",
-        data: { labels: names, datasets: [{ label: "Total Hours", data: hours, backgroundColor: "#0d6efd" }] },
-        options: { responsive: true, plugins: { legend: { display: false } } }
-      });
-
-      const ctx2 = document.getElementById("perfPie").getContext("2d");
-      perfPie = new Chart(ctx2, {
-        type: "pie",
-        data: { labels: names, datasets: [{ label: "Performance %", data: perfs, backgroundColor: ["#0d6efd","#198754","#ffc107","#dc3545","#6f42c1","#20c997","#fd7e14"] }] },
-        options: { responsive: true }
-      });
-    }
-
-    Papa.parse("https://nijannfbd7890.github.io/Team-Dashboard/team_report.csv", {
+    Papa.parse(csvUrl, {
       download: true,
       header: true,
       complete: function(results) {
-        allData = results.data;
-        populateMonths(allData);
+        data = results.data.filter(row => row.Name && row.Performance);
+        populateDropdown();
         updateDashboard("All");
-
-        document.getElementById("monthFilter").addEventListener("change", (e) => {
-          updateDashboard(e.target.value);
-        });
       }
     });
+
+    function populateDropdown() {
+      const months = [...new Set(data.map(d => d.Month))];
+      const monthSelect = document.getElementById("monthSelect");
+      months.forEach(m => {
+        const option = document.createElement("option");
+        option.value = m;
+        option.textContent = m;
+        monthSelect.appendChild(option);
+      });
+      monthSelect.addEventListener("change", () => updateDashboard(monthSelect.value));
+    }
+
+    function updateDashboard(selectedMonth) {
+      let filtered = selectedMonth === "All" ? data : data.filter(d => d.Month === selectedMonth);
+
+      const totalHours = filtered.reduce((sum, d) => sum + parseFloat((d.Hours || "0").replace(/[^0-9.]/g, "")), 0);
+      const avgPerformance = (filtered.reduce((sum, d) => sum + parseFloat(d.Performance), 0) / filtered.length || 0).toFixed(1);
+      const topPerformer = filtered.reduce((best, d) => (parseFloat(d.Performance) > parseFloat(best.Performance || 0) ? d : best), {}).Name || "-";
+
+      document.getElementById("totalHours").textContent = totalHours.toFixed(0) + "h";
+      document.getElementById("avgPerformance").textContent = avgPerformance + "%";
+      document.getElementById("teamCount").textContent = filtered.length;
+      document.getElementById("topPerformer").textContent = topPerformer;
+
+      renderCharts(filtered);
+      renderTable(filtered);
+    }
+
+    function renderCharts(filtered) {
+      const monthHours = {};
+      filtered.forEach(d => {
+        monthHours[d.Month] = (monthHours[d.Month] || 0) + parseFloat((d.Hours || "0").replace(/[^0-9.]/g, ""));
+      });
+      const labels = Object.keys(monthHours);
+      const values = Object.values(monthHours);
+
+      new Chart(document.getElementById("hoursChart"), {
+        type: "bar",
+        data: {
+          labels,
+          datasets: [{
+            label: "Hours by Month",
+            data: values,
+            borderWidth: 1
+          }]
+        },
+        options: { scales: { y: { beginAtZero: true } } }
+      });
+
+      const performanceByMonth = {};
+      filtered.forEach(d => {
+        const month = d.Month;
+        if (!performanceByMonth[month]) performanceByMonth[month] = [];
+        performanceByMonth[month].push(parseFloat(d.Performance));
+      });
+      const perfLabels = Object.keys(performanceByMonth);
+      const perfValues = perfLabels.map(m => 
+        performanceByMonth[m].reduce((a, b) => a + b, 0) / performanceByMonth[m].length
+      );
+
+      new Chart(document.getElementById("performanceChart"), {
+        type: "line",
+        data: {
+          labels: perfLabels,
+          datasets: [{
+            label: "Average Performance (%)",
+            data: perfValues,
+            fill: false,
+            tension: 0.3,
+            borderWidth: 2
+          }]
+        },
+        options: { scales: { y: { beginAtZero: true, max: 110 } } }
+      });
+    }
+
+    function renderTable(filtered) {
+      const tbody = document.querySelector("#dataTable tbody");
+      tbody.innerHTML = "";
+      filtered.forEach(d => {
+        const tr = document.createElement("tr");
+        const performance = parseFloat(d.Performance);
+        let cls = "low";
+        if (performance > 95) cls = "high";
+        else if (performance > 80) cls = "medium";
+        tr.className = cls;
+
+        tr.innerHTML = `
+          <td>${d.Name}</td>
+          <td>${d.Performance}%</td>
+          <td>${d.Remarks}</td>
+          <td>${d.Hours}</td>
+          <td>${d.Month}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
   </script>
 </body>
-
 </html>
